@@ -1,5 +1,6 @@
 #| Loads a font from a PDF font dictionary
 class PDF::Font::Loader::Dict {
+    use Font::AFM;
     use PDF::Content::Font::CoreFont;
     use PDF::COS::Dict;
     use PDF::COS::Stream;
@@ -36,6 +37,7 @@ class PDF::Font::Loader::Dict {
     }
 
     method is-core-font($?: FontDict :$dict! ) is export(:is-core-font) {
+        warn [$dict<Subtype>, font-descriptor($dict)].raku;
         $dict<Subtype> ~~ 'Type1'
         && ! font-descriptor($dict).defined
     }
@@ -190,11 +192,22 @@ class PDF::Font::Loader::Dict {
             }
         }
         else {
-            # no font descriptor. assume core font
+            # no font descriptor. unembedded or core font
             my $font-name = $dict<BaseFont> // 'courier';
             my $family = $font-name;
+
             %opt<weight> = 'bold' if $family ~~ s/:i ['-'|',']? bold //;
             %opt<slant> = $0.lc if $family ~~ s/:i ['-'|',']? (italic|oblique) //;
+
+            if $dict<Subtype> ~~ 'Type1' {
+                with PDF::Content::Font::CoreFont.core-font-name($font-name) {
+                    # core font
+                    %encoder<core-metrics> = Font::AFM.core-font: $_;
+                    %opt<font-descriptor> = PDF::COS::Dict;
+                    $family = 'serif' if .starts-with('times');
+                    $family = 'sans'  if .starts-with('helvetica');
+                }
+            }
             %opt ,= :$font-name;
             %opt ,= :$family;
             %opt<enc> //= do given $family {
