@@ -1,4 +1,6 @@
 {{$NEXT}}
+    - Improved handling of core fonts. Use standard core-font metrics over
+      substituted font metrics.
 
 0.6.1  2022-05-12T08:23:14+12:00
     Initial page-level thread-safety
@@ -17,7 +19,7 @@
 
 0.5.15  2021-10-15T07:45:19+13:00
     - Add load-font(:$prefix) option. To enable a pre-determined prefix (6
-      upppercase letters) for subsetted fonts. Used in the test-suite to
+      uppercase letters) for subsetted fonts. Used in the test-suite to
       create stable PDF files, without any random characters.
     - Fix font encoding issue #12
 
